--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -750,8 +750,9 @@ main {
 
 .clients-item img {
   width: 100%;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
   transition: var(--transition-1);
+  scale: 70%;
 }
 
 .clients-item img:hover { filter: grayscale(0); }
