--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,18 +25,18 @@
 
   --bg-gradient-onyx: linear-gradient(
     to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
-    hsl(0, 0%, 19%) 97%
+    hsl(296, 71%, 81%) 3%, 
+    hsl(0, 0%, 100%) 97%
   );
   --bg-gradient-jet: linear-gradient(
     to bottom right, 
-    hsla(240, 1%, 18%, 0.251) 0%, 
-    hsla(240, 2%, 11%, 0) 100%
-  ), hsl(240, 2%, 13%);
+    hsla(0, 0%, 94%, 0.251) 0%, 
+    hsla(0, 0%, 91%, 0) 100%
+  ), #ffffff;
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
     #b415a0 0%, 
-    hsla(36, 100%, 69%, 0) 50%
+    hsla(300, 100%, 69%, 0) 50%
   );
   --bg-gradient-yellow-2: linear-gradient(
     135deg, 
@@ -56,11 +56,11 @@
 
   /* solid */
 
-  --jet: hsl(0, 0%, 22%);
-  --onyx: hsl(240, 1%, 17%);
-  --eerie-black-1: hsl(240, 2%, 13%);
-  --eerie-black-2: hsl(240, 2%, 12%);
-  --smoky-black: hsl(0, 0%, 7%);
+  --jet: hsl(0, 3%, 87%);
+  --onyx: hsl(240, 2%, 84%);
+  --eerie-black-1: hsl(0, 0%, 100%);
+  --eerie-black-2: hsl(296, 81%, 96%);
+  --smoky-black: hsl(0, 0%, 99%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
   --orange-yellow-crayola: #b415a0;
@@ -224,7 +224,7 @@ article.active {
 .h3,
 .h4,
 .h5 {
-  color: var(--white-2);
+  color: black;
   text-transform: capitalize;
 }
 
@@ -256,8 +256,8 @@ article.active {
 }
 
 .has-scrollbar::-webkit-scrollbar {
-  width: 5px; /* for vertical scrollbar */
-  height: 5px; /* for horizontal scrollbar */
+  width: 8px; /* for vertical scrollbar */
+  height: 8px; /* for horizontal scrollbar */
 }
 
 .has-scrollbar::-webkit-scrollbar-track {
@@ -337,7 +337,7 @@ main {
 }
 
 .info-content .name {
-  color: var(--white-2);
+  color: black;
   font-size: 22px;
   font-weight: var(--fw-500);
   letter-spacing: -0.25px;
@@ -345,8 +345,8 @@ main {
 }
 
 .info-content .title {
-  color: var(--white-1);
-  background: var(--onyx);
+  color: black;
+  background: #b415a0;
   font-size: var(--fs-8);
   font-weight: var(--fw-300);
   width: max-content;
@@ -360,7 +360,7 @@ main {
   right: -15px;
   border-radius: 0 15px;
   font-size: 13px;
-  color: var(--orange-yellow-crayola);
+  color: black;
   background: var(--border-gradient-onyx);
   padding: 10px;
   box-shadow: var(--shadow-2);
@@ -416,14 +416,14 @@ main {
 }
 
 .contact-title {
-  color: var(--light-gray-70);
+  color: black;
   font-size: var(--fs-8);
   text-transform: uppercase;
   margin-bottom: 2px;
 }
 
 .contact-info :is(.contact-link, time, address) {
-  color: var(--white-2);
+  color: black;
   font-size: var(--fs-7);
 }
 
@@ -439,7 +439,7 @@ main {
 }
 
 .social-item .social-link {
-  color: var(--light-gray-70);
+  color: #b415a0;
   font-size: 18px;
 }
 
@@ -498,7 +498,7 @@ main {
 .about .article-title { margin-bottom: 15px; }
 
 .about-text {
-  color: var(--light-gray);
+  color: black;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
@@ -549,7 +549,7 @@ main {
 .service-item-title { margin-bottom: 7px; }
 
 .service-item-text {
-  color: var(--light-gray);
+  color: rgb(0, 0, 0);
   font-size: var(--fs-6);
   font-weight: var(--fw-3);
   line-height: 1.6;
@@ -596,7 +596,7 @@ main {
 .testimonials-item-title { margin-bottom: 7px; }
 
 .testimonials-text {
-  color: var(--light-gray);
+  color: rgb(0, 0, 0);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
@@ -685,7 +685,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--white-2);
+  color: black;
   font-size: 18px;
   opacity: 0.7;
 }
@@ -709,13 +709,13 @@ main {
 
 .modal-content time {
   font-size: var(--fs-6);
-  color: var(--light-gray-70);
+  color: black;
   font-weight: var(--fw-300);
   margin-bottom: 10px;
 }
 
 .modal-content p {
-  color: var(--light-gray);
+  color: black;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
@@ -797,7 +797,7 @@ main {
 }
 
 .timeline-list span {
-  color: var(--vegas-gold);
+  color: black;
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
@@ -825,7 +825,7 @@ main {
 }
 
 .timeline-text {
-  color: var(--light-gray);
+  color: black;
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
@@ -850,7 +850,7 @@ main {
 }
 
 .skill .title-wrapper data {
-  color: var(--light-gray);
+  color: black;
   font-size: var(--fs-7);
   font-weight: var(--fw-300);
 }
@@ -863,7 +863,7 @@ main {
 }
 
 .skill-progress-fill {
-  background: var(--text-gradient-yellow);
+  background: #b415a0;
   height: 100%;
   border-radius: inherit;
 }
@@ -884,8 +884,8 @@ main {
 }
 
 .filter-select {
-  background: var(--eerie-black-2);
-  color: var(--light-gray);
+  background: black;
+  color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -900,7 +900,7 @@ main {
 .filter-select.active .select-icon { transform: rotate(0.5turn); }
 
 .select-list {
-  background: var(--eerie-black-2);
+  background: black;
   position: absolute;
   top: calc(100% + 6px);
   width: 100%;
@@ -922,7 +922,7 @@ main {
 
 .select-item button {
   background: var(--eerie-black-2);
-  color: var(--light-gray);
+  color: black;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   text-transform: capitalize;
@@ -981,7 +981,7 @@ main {
   --scale: 0.8;
 
   background: var(--jet);
-  color: var(--orange-yellow-crayola);
+  color: black;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1014,7 +1014,7 @@ main {
 .project-category { margin-left: 10px; }
 
 .project-title {
-  color: var(--white-2);
+  color: black;
   font-size: var(--fs-5);
   font-weight: var(--fw-400);
   text-transform: capitalize;
@@ -1022,7 +1022,7 @@ main {
 }
 
 .project-category {
-  color: var(--light-gray-70);
+  color: black;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
 }
@@ -1088,13 +1088,13 @@ main {
 }
 
 .blog-meta :is(.blog-category, time) {
-  color: var(--light-gray-70);
+  color: black;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
 }
 
 .blog-meta .dot {
-  background: var(--light-gray-70);
+  background: black;
   width: 4px;
   height: 4px;
   border-radius: 4px;
@@ -1109,7 +1109,7 @@ main {
 .blog-post-item > a:hover .blog-item-title { color: var(--orange-yellow-crayola); }
 
 .blog-text {
-  color: var(--light-gray);
+  color: black;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
@@ -1154,7 +1154,7 @@ main {
 }
 
 .form-input {
-  color: var(--white-2);
+  color: black;
   font-size: var(--fs-6);
   font-weight: var(--fw-400);
   padding: 13px 20px;
@@ -1614,7 +1614,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   }
 
   .filter-item button {
-    color: var(--light-gray);
+    color: black;
     font-size: var(--fs-5);
     transition: var(--transition-1);
   }
@@ -1882,7 +1882,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 }
 .fullname{
-  color: var(--white-2);
+  color: black;
   font-size: 14px;
   font-weight: var(--fw-500);
   letter-spacing: -0.25px;
@@ -1890,11 +1890,12 @@ textarea.form-input::-webkit-resizer { display: none; }
   text-align: center;
 }
 .light{
-  background-color: white !important;
-  color: black !important;
-  transition: .5s;
+  background: black !important;
+  color: white !important;
+  transition: 1s;
 
 }
 .switch-on{
   display: none;
 }
+
