--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1899,3 +1899,73 @@ textarea.form-input::-webkit-resizer { display: none; }
   display: none;
 }
 
+.open{
+  display: block !important;
+}
+
+
+.modal-project {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: #fff0f6;
+  border: 2px solid #ffcce0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  display: none;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #ffcce0;
+  border: none;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 16px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.modal-close-btn:hover {
+  background-color: #ff99b2;
+}
+
+.modal-content {
+  padding: 20px;
+  text-align: center;
+}
+
+.modal-content h2 {
+  margin: 0 0 10px;
+  color: #ff6699;
+}
+
+.modal-content p {
+  color: #333;
+}
+
+.modal-context {
+  padding: 15px;
+  background-color: #ffe6eb;
+  border-top: 1px solid #ffcce0;
+  color: #555;
+  font-size: 14px;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* สีดำโปร่งแสง */
+  z-index: 999; /* อยู่ใต้ modal */
+  display: none;
+}
