--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,13 +472,13 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 0 10px;
+  padding: 0 1จpx;
 }
 
 .navbar-link {
   color: var(--light-gray);
   font-size: var(--fs-8);
-  padding: 20px 7px;
+  padding: 20px 2px;
   transition: color var(--transition-1);
 }
 
