--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,7 +459,7 @@ main {
   bottom: 0;
   left: 0;
   width: 100%;
-  background: hsla(240, 1%, 17%, 0.75);
+  background: hsla(0, 0%, 100%, 0.75);
   backdrop-filter: blur(10px);
   border: 1px solid var(--jet);
   border-radius: 12px 12px 0 0;
@@ -476,7 +476,7 @@ main {
 }
 
 .navbar-link {
-  color: var(--light-gray);
+  color: #000000;
   font-size: var(--fs-8);
   padding: 20px 2px;
   transition: color var(--transition-1);
@@ -1014,17 +1014,27 @@ main {
 .project-category { margin-left: 10px; }
 
 .project-title {
-  color: black;
-  font-size: var(--fs-5);
-  font-weight: var(--fw-400);
-  text-transform: capitalize;
-  line-height: 1.3;
-}
-
-.project-category {
-  color: black;
+  color: #b415a0;
+  
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
+  background: #ffffff;
+  width: max-content;
+  padding: 3px 12px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+
+
+.project-category {
+  color: rgb(0, 0, 0);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-300);
+  background: #ffffff;
+  width: max-content;
+  padding: 3px 12px;
+  border-radius: 8px;
+  
 }
 
 
@@ -1338,9 +1348,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { gap: 25px; }
 
-  .avatar-box { border-radius: 30px; }
+  .avatar-box { border-radius: 30px;  }
 
-  .avatar-box img { width: 120px; }
+  .avatar-box img { width: 120px;border-radius:10px }
 
   .info-content .name { margin-bottom: 15px; }
 
