--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,7 +472,7 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 0 1จpx;
+  padding: 0 20px;
 }
 
 .navbar-link {
@@ -895,6 +895,7 @@ main {
   border-radius: 14px;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
+  display: block;
 }
 
 .filter-select.active .select-icon { transform: rotate(0.5turn); }
@@ -961,6 +962,7 @@ main {
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 15px;
+  object-fit: cover;
 }
 
 .project-img::before {
@@ -1153,7 +1155,7 @@ main {
   width: 100%;
   height: 100%;
   border: none;
-  filter: grayscale(1) invert(1);
+
 }
 
 .contact-form { margin-bottom: 10px; }
