--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1013,7 +1013,7 @@ main {
 
 .project-img img {
   width: 100%;
-  height: 100%;
+  height: 350px;
   object-fit: cover;
   transition: var(--transition-1);
 }
@@ -2000,5 +2000,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 }
 .tel{
   color: rgb(100, 100, 100);
+}
+.pro-img{
+  width: 250px;
+  height: 334px;
+
 }
 
