--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1038,7 +1038,7 @@ main {
 
 
 .project-category {
-  color: rgb(0, 0, 0);
+  color: #b415a0;
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   background: #ffffff;
